feat: implemented walley tracking apis
